--- a/progress/w01_30_01.md
+++ b/progress/w01_30_01.md
@@ -18,15 +18,15 @@
 
 <h2 align="center">30/01</h2>
 
-*No activity*
+Getting familiar with the program
 
 <h2 align="center">31/01</h2>
 
-*No activity*
+Setting up various tools and environments.
 
 <h2 align="center">01/02</h2>
 
-*No activity*
+Learn Angular and work on various issues.
 
 <h2 align="center">02/02</h2>
 
@@ -51,9 +51,9 @@
 
 | Worked on 	| Status 	| Link 	|
 |----------	|-------	|--------	|
-| Choose a project | *Chosing* or *Chosen* | *Link to project* |
-| Run the project | Project is *running* or *not running* | |
-| Pick a teammate | Teammate *picked* or *asked to pick* | *Link to GitHub of teammate* |
+| Choose a project | *Chosing* or *Chosen* | https://github.com/italanta/elewa-group |
+| Run the project | Project is in development | |
+| Pick a teammate | Roy Okite | https://github.com/royokite |
 
 
 <h2 align="center">03/02</h2>
@@ -80,8 +80,8 @@
 
 | Worked on 	| Status 	| Link 	|
 |----------	|-------	|--------	|
-| Choose a project | *Chosing* or *Chosen* | *Link to project* |
-| Choose an issue | Issue *chosen* / *choosing* | *Link to issue* |
+| Choose a project |*Chosen* | https://github.com/italanta/elewa-group |
+| Choose an issue | Issue *chosen* | https://github.com/italanta/elewa-group/issues/35 |
 
 <br/>
 
@@ -114,9 +114,9 @@
 
 |                | Mo | Tu 	| We 	| Th    | Fr | Sa |
 |---             |---	|---	|---  |---    |--- |--- |
-| **Start time** |    |     |     | 08:00 |    |    |
-| **End time**	 |    |     |     | 17:00 |    |    |
-| **Hours**	     | 0  | 0   | 0   | 8     | 0  | 0  |
+| **Start time** | 09:00   |  09:00   |  11:30   | 09:00 | 09:00   | 11:00   |
+| **End time**	 |   14:00 | 16:00    |  15:00   | 17:00 |   17:00 |  14:00  |
+| **Hours**	     | 5  | 7   | 4   | 8     | 8  | 3  |
 
 ### My lessons
 <!-- What did I learn? -->
@@ -124,7 +124,6 @@
 
 - Basics of Angular
 - Running an Angular project
-- Firebase
 - Serverless programming
 
 <u>The key lesson(s) of this week:</u>
@@ -135,10 +134,10 @@ Observables are timelines. Values which change over time. Using Rxjs, a system c
 <!-- How did you feel? -->
 <u>Self assessment of how I felt this week:</u>
 
-- My mood this week was (exciting / encouraged / happy / afraid / overwhelmed / ...) because ...
+- My mood this week was overwhelming as I had the pressure of learning a new framework (Angular).
   
-- Compared to last week, I feel more (excited / encouraged / happy / overhwelmed / grateful / disappointed / bored / ...) because ...
+- Compared to last week, I feel more encouraged because I have managed to learn a lot and can now create a basic application with the "few" :) skills i've learnt.
 
-- I find the project to be (joyful / relaxing / exciting / it challenges me / difficult / I need something more challenging / ...)
+- I find the project to be exciting with each passing day as I get to collaborate and brainstorm on solutions to issues opened.
 
-- My level of stress is (relaxed / manageable / high) 
+- My level of stress is manageable.
