--- a/progress/w02_06_02.md
+++ b/progress/w02_06_02.md
@@ -29,9 +29,9 @@
 
 | Scrum	       | Answers 	| 
 |----------	   |-------	  |
-| Doing today? |          |
-| Objective    |          |
-| Blockers?    |          |
+| Doing today? | I am collaborating with @royokite to careate a reusable vertical list|
+| Objective    | Work on the issue and successfully merge my pull request|
+| Blockers?    | None |
 
 ### Task progresss board
 
@@ -39,27 +39,65 @@
 
 | Date     	| Issue 	| Status 	| Link 	|
 |----------	|-------	|--------	|------	|
-| 17/01/23 	| 🏇 Example issue name | Merged | [#22](https://github.com/italanta/kujali/issues/22) |
+| 06/02/23 	| 🏇 Create a reusable vertical list for projects, news etc.. | Merged | [#35](https://github.com/italanta/kujali/issues/35) |
 | 12/01/23	| 🏇 Example issue name | Closed/Approved | [#22](https://github.com/italanta/kujali/issues/22) |
 
 **TODO: Copy for each day applicable..**
 
 <h2 align="center">07/02</h2>
 
-*No activity*
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? | Learning more about SCSS and Angular routing |
+| Objective    | Successfully learn the basics of SCSS and SASS in addition to Angular routing |
+| Blockers?    | Scarcity in free Angular 15 tutorials |
+
+### Task progresss board
+
+<!-- List all the tasks and bounties in progress this week -->
+
 
 <h2 align="center">08/02</h2>
 
-*No activity*
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? | Attempt to make a pull request by the end of the day |
+| Objective    | Successfully make a pull request |
+| Blockers?    | None |
+
+### Task progresss board
+
+<!-- List all the tasks and bounties in progress this week -->
 
 <h2 align="center">09/02</h2>
 
-*No activity*
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? | Working on team members carousel and reusable text and image banner with @royokite |
+| Objective    | Successfully make two pull requests |
+| Blockers?    | Unfamiliarity with carousel design |
+
+| Date     	| Issue 	| Status 	| Link 	|
+|----------	|-------	|--------	|------	|
+| 09/02/23 	| 🏇 Create team members carousel | Pending review | [#41](https://github.com/italanta/kujali/issues/41) |
+| 09/02/23 	| 🏇 Create reusable text and image banner (side by side) | Pending review | [#31](https://github.com/italanta/kujali/issues/31) |
+
+
+### Task progresss board
+
+<!-- List all the tasks and bounties in progress this week -->
 
 <h2 align="center">10/02</h2>
 
-*No activity*
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? | Working on the website hero section |
+| Objective    | Successfully make a pull request |
+| Blockers?    | None |
 
+### Task progresss board
+
+<!-- List all the tasks and bounties in progress this week -->
 
 <br/>
 
@@ -74,12 +112,12 @@
 <u>My main achievement:</u>
 
 <!-- Write the achievement you are most proud off in one line! -->
-<h3 align="center">Kicking off the sprint and running the project!</h3>
+<h3 align="center">Successfully merging requests</h3>
 
 <!-- List all your achievement -->
 <u>This week I managed to:</u>
 
-- [ ] ..
+- [ ] Make four pull requests two of which were merged :)
 
 ### My week
 <!-- Keep track of your time table daily -->
@@ -87,28 +125,32 @@
 
 |                | Mo | Tu 	| We 	| Th | Fr | Sa |
 |---             |---	|---	|---  |--- |--- |--- |
-| **Start time** |    |     |     |    |    |    |
-| **End time**	 |    |     |     |    |    |    |
-| **Hours**	     | 0  | 0   | 0   | 0  | 0  | 0  |
+| **Start time** | 10:00   |  10:30   | 09:00    | 09:00   | 09:00   | 11:30   |
+| **End time**	 |  15:00  |  14:00   |  16:00   | 16:00   | 17:00   |  15:00  |
+| **Hours**	     | 5  | 3.5  | 7  | 7  | 8  | 3.5  |
 
 ### My lessons
 <!-- What did I learn? -->
 <u>Everything I learned</u>
 
-- 
+- SCSS and SASS.
+- Angular basics
+- Angular routing
+- Debugging techniques
+- Proper planning
+- Collaboration
 
 <u>The key lesson(s) of this week:</u>
-
-TODO
+- Collaboration with fellow students to debug and solve issues
 
 ### How I am doing
 <!-- How did you feel? -->
 <u>Self assessment of how I felt this week:</u>
 
-- My mood this week was (exciting / encouraged / happy / afraid / overwhelmed / ...) because ...
+- My mood this week was encouraging because I accomplished everything I set out to accomplish
   
-- Compared to last week, I feel more (excited / encouraged / happy / overhwelmed / grateful / disappointed / bored / ...) because ...
+- Compared to last week, I feel more happy because I have got used to the requirements and also managed to make some new friends and networks :)
 
-- I find the project to be (joyful / relaxing / exciting / it challenges me / difficult / I need something more challenging / ...)
+- I find the project to be relaxing ;)
 
-- My level of stress is (relaxed / manageable / high) 
+- My level of stress is relaxed
