--- a/progress/w03_13_02.md
+++ b/progress/w03_13_02.md
@@ -48,19 +48,71 @@
 
 <h2 align="center">14/02</h2>
 
-*No activity*
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |          |
+| Objective    |          |
+| Blockers?    |          |
+
+### Task progresss board
+
+<!-- List all the tasks and bounties in progress this week -->
+
+| Date     	| Issue 	| Status 	| Link 	|
+|----------	|-------	|--------	|------	|
+| 17/01/23 	| 🏇 Example issue name | Merged | [#22](https://github.com/italanta/kujali/issues/22) |
+| 12/01/23	| 🏇 Example issue name | Closed/Approved | [#22](https://github.com/italanta/kujali/issues/22) |
 
 <h2 align="center">15/02</h2>
 
-*No activity*
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |          |
+| Objective    |          |
+| Blockers?    |          |
+
+### Task progresss board
+
+<!-- List all the tasks and bounties in progress this week -->
+
+| Date     	| Issue 	| Status 	| Link 	|
+|----------	|-------	|--------	|------	|
+| 17/01/23 	| 🏇 Example issue name | Merged | [#22](https://github.com/italanta/kujali/issues/22) |
+| 12/01/23	| 🏇 Example issue name | Closed/Approved | [#22](https://github.com/italanta/kujali/issues/22) |
 
 <h2 align="center">16/02</h2>
 
-*No activity*
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |          |
+| Objective    |          |
+| Blockers?    |          |
+
+### Task progresss board
+
+<!-- List all the tasks and bounties in progress this week -->
+
+| Date     	| Issue 	| Status 	| Link 	|
+|----------	|-------	|--------	|------	|
+| 17/01/23 	| 🏇 Example issue name | Merged | [#22](https://github.com/italanta/kujali/issues/22) |
+| 12/01/23	| 🏇 Example issue name | Closed/Approved | [#22](https://github.com/italanta/kujali/issues/22) |
 
 <h2 align="center">17/02</h2>
 
-*No activity*
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |          |
+| Objective    |          |
+| Blockers?    |          |
+
+### Task progresss board
+
+<!-- List all the tasks and bounties in progress this week -->
+
+| Date     	| Issue 	| Status 	| Link 	|
+|----------	|-------	|--------	|------	|
+| 17/01/23 	| 🏇 Example issue name | Merged | [#22](https://github.com/italanta/kujali/issues/22) |
+| 12/01/23	| 🏇 Example issue name | Closed/Approved | [#22](https://github.com/italanta/kujali/issues/22) |
 
 
 <br/>
