--- a/progress/w03_13_02.md
+++ b/progress/w03_13_02.md
@@ -29,11 +29,6 @@
   -- Blockers?    - Any blockers? Anywhere you need help?
 -->
 
-| Scrum	       | Answers 	| 
-|----------	   |-------	  |
-| Doing today? |          |
-| Objective    |          |
-| Blockers?    |          |
 
 ### Task progresss board
 
@@ -41,78 +36,43 @@
 
 | Date     	| Issue 	| Status 	| Link 	|
 |----------	|-------	|--------	|------	|
-| 17/01/23 	| 🏇 Example issue name | Merged | [#22](https://github.com/italanta/kujali/issues/22) |
-| 12/01/23	| 🏇 Example issue name | Closed/Approved | [#22](https://github.com/italanta/kujali/issues/22) |
+| 13/01/23 	| 🏇 Specific number of characters in the question and list blocks | Ongoing | [#302](https://github.com/italanta/elewa/issues/302) |
 
-**TODO: Copy for each day applicable..**
 
 <h2 align="center">14/02</h2>
 
 | Scrum	       | Answers 	| 
 |----------	   |-------	  |
-| Doing today? |          |
-| Objective    |          |
-| Blockers?    |          |
+| Doing today? | Setting up elewa CLM project |
+| Objective    | Get the CLM project up and running |
+| Blockers?    | None |
 
-### Task progresss board
-
-<!-- List all the tasks and bounties in progress this week -->
-
-| Date     	| Issue 	| Status 	| Link 	|
-|----------	|-------	|--------	|------	|
-| 17/01/23 	| 🏇 Example issue name | Merged | [#22](https://github.com/italanta/kujali/issues/22) |
-| 12/01/23	| 🏇 Example issue name | Closed/Approved | [#22](https://github.com/italanta/kujali/issues/22) |
 
 <h2 align="center">15/02</h2>
 
 | Scrum	       | Answers 	| 
 |----------	   |-------	  |
-| Doing today? |          |
-| Objective    |          |
-| Blockers?    |          |
+| Doing today? | Learn jsplumb basics to use in the CLM project  |
+| Objective    | Successfully grasp the jsplumb basics |
+| Blockers?    | none |
 
-### Task progresss board
-
-<!-- List all the tasks and bounties in progress this week -->
-
-| Date     	| Issue 	| Status 	| Link 	|
-|----------	|-------	|--------	|------	|
-| 17/01/23 	| 🏇 Example issue name | Merged | [#22](https://github.com/italanta/kujali/issues/22) |
-| 12/01/23	| 🏇 Example issue name | Closed/Approved | [#22](https://github.com/italanta/kujali/issues/22) |
 
 <h2 align="center">16/02</h2>
 
 | Scrum	       | Answers 	| 
 |----------	   |-------	  |
-| Doing today? |          |
-| Objective    |          |
-| Blockers?    |          |
+| Doing today? | Have a meeting to discuss CLM project basics |
+| Objective    | Familiarize with project stories and blocks |
+| Blockers?    | None |
 
-### Task progresss board
-
-<!-- List all the tasks and bounties in progress this week -->
-
-| Date     	| Issue 	| Status 	| Link 	|
-|----------	|-------	|--------	|------	|
-| 17/01/23 	| 🏇 Example issue name | Merged | [#22](https://github.com/italanta/kujali/issues/22) |
-| 12/01/23	| 🏇 Example issue name | Closed/Approved | [#22](https://github.com/italanta/kujali/issues/22) |
 
 <h2 align="center">17/02</h2>
 
 | Scrum	       | Answers 	| 
 |----------	   |-------	  |
-| Doing today? |          |
-| Objective    |          |
-| Blockers?    |          |
-
-### Task progresss board
-
-<!-- List all the tasks and bounties in progress this week -->
-
-| Date     	| Issue 	| Status 	| Link 	|
-|----------	|-------	|--------	|------	|
-| 17/01/23 	| 🏇 Example issue name | Merged | [#22](https://github.com/italanta/kujali/issues/22) |
-| 12/01/23	| 🏇 Example issue name | Closed/Approved | [#22](https://github.com/italanta/kujali/issues/22) |
+| Doing today? |  Go through the rxjs documentation  |
+| Objective    | Grasp the basics of rxjs |
+| Blockers?    | none         |
 
 
 <br/>
@@ -128,12 +88,14 @@
 <u>My main achievement:</u>
 
 <!-- Write the achievement you are most proud off in one line! -->
-<h3 align="center">Kicking off the sprint and running the project!</h3>
+<h3 align="center">Kicking off the sprint and running the CLM project!</h3>
 
 <!-- List all your achievement -->
 <u>This week I managed to:</u>
 
-- [ ] 
+- [ Successfully set up my firebase account ] 
+- [ Successfully initialize the CLM project ]
+- [ Learn the basics of jsplumb and rxjs ]
 
 
 ### My week
@@ -142,16 +104,18 @@
 
 |                | Mo | Tu 	| We 	| Th | Fr | Sa |
 |---             |---	|---	|---  |--- |--- |--- |
-| **Start time** |    |     |     |    |    |    |
-| **End time**	 |    |     |     |    |    |    |
-| **Hours**	     | 0  | 0   | 0   | 0  | 0  | 0  |
+| **Start time** | 8:30   | 9:00    | 9:00    | 9:00   | 9:00   | 11:00   |
+| **End time**	 | 13:00   | 14:00    | 14:00    | 16:00   | 16:00   | 13:00   |
+| **Hours**	     | 4.5  | 5   | 5   | 7  | 7  | 2  |
 
 
 ### My lessons
 <!-- What did I learn? -->
 <u>Everything I learned</u>
 
-- 
+- The basics of rxjs
+- The basics of jsplumb
+- Firebase and firestore basics
 
 <u>The key lesson(s) of this week:</u>
 
@@ -161,10 +125,10 @@ TODO
 <!-- How did you feel? -->
 <u>Self assessment of how I felt this week:</u>
 
-- My mood this week was (exciting / encouraged / happy / afraid / overwhelmed / ...) because ...
+- My mood this week was overwhelming because I had no prior experience with tools like jsplumb and rxjs so getting upto speed was quite draining :(
   
-- Compared to last week, I feel more (excited / encouraged / happy / overhwelmed / grateful / disappointed / bored / ...) because ...
+- Compared to last week, I feel more overhwelmed  because i have had to learn multiple libraries in a short while which is quite intensive.
 
-- I find the project to be (joyful / relaxing / exciting / it challenges me / difficult / I need something more challenging / ...)
+- I find the project to be a bit challenging
 
-- My level of stress is (relaxed / manageable / high) 
+- My level of stress is manageable 
